<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="call">Call</string>
    <string name="details">Details</string>
    <string name="list">List</string>
    <string name="camera">Camera</string>
    <string name="assets">Assets</string>
    <string name="enter_number">Enter your number</string>
    <string name="show">Show contacts</string>

</resources>
