<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnDetails"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textColor="#000000" />
    
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="#000000" />
    
    <Button
        android:id="@+id/btnAssets"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/assets"
        android:textColor="#000000" />

</LinearLayout>